[metadata]
name = meta3-demo
version = attr: _version
author = Erik van Widenfelt
author_email = ew2789@gmail.com
url = https://github.com/meta-trial/meta3-demo
license = GPL license, see LICENSE
description = Demo project for the META3 edc
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = django, edc, META3, clinicedc, clinical trials
classifiers=
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)


[options]
python_requires = >=3.10
zip_safe = False
include_package_data = True
packages = find:

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    bin*

[flake8]
ignore = E226,W503,E203
max-line-length = 95
max-complexity = 10
exclude = */migrations/*,.tox,.git,__pycache__,build,dist
per-file-ignores = __init__.py: F401
